claude-exp: iteration 3