@@ -1,12 +1,10 @@
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public class StronglyConnectedComponent {
     private final List<Integer> vertices;
 
     public StronglyConnectedComponent(List<Integer> vertices) {
-        this.vertices = Collections.unmodifiableList(new ArrayList<>(vertices));
+        this.vertices = List.copyOf(vertices);
     }
 
     public List<Integer> getVertices() {
