@@ -1,12 +1,11 @@
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Iterator;
 import java.util.List;
 
-public class StronglyConnectedComponentsResult {
+public class StronglyConnectedComponentsResult implements Iterable<StronglyConnectedComponent> {
     private final List<StronglyConnectedComponent> components;
 
     public StronglyConnectedComponentsResult(List<StronglyConnectedComponent> components) {
-        this.components = Collections.unmodifiableList(new ArrayList<>(components));
+        this.components = List.copyOf(components);
     }
 
     public List<StronglyConnectedComponent> getComponents() {
@@ -15,5 +14,10 @@ public class StronglyConnectedComponentsResult {
 
     public int count() {
         return components.size();
+    }
+
+    @Override
+    public Iterator<StronglyConnectedComponent> iterator() {
+        return components.iterator();
     }
 }
